# poetry

./: .gitignore  app.py  poem.py  poem_from_cache.py  start_backend_server.bat  start_dev_servers.bat  start_frontend_server.bat
WritingAssistantBackend/: .env  .env.md  .flaskenv.md  alembic.ini  app.py  dbInitialData.py  dbInstall.md  dbModel.py  extensions.py  keywordbase.py  manage.py  model_builder_custom.py  poem.py  poem_container.py  poem_from_cache.py  poem_list.py  poem_repository.py  poem_rouge.py  poembase.py  poembase_config.py  poembase_from_cache.py  prior_sampling.py  pyproject.toml  routes.py  start_dev_servers.bat  sylvia.py  verse_generator.py  write.py
WritingAssistantBackend/auth/: authentication.py  routes.py
WritingAssistantBackend/config/: charles.json  sylvia.json
WritingAssistantBackend/data/: actionTargetTypes.csv  actionTypes.csv  distanceMetrics.csv  poemstatuses.csv  rougeMetrics.csv
WritingAssistantBackend/migrations/: env.py
WritingAssistantBackend/setupBackend/: 3-setup-explicit-versions.bat  WritingAssistantBackend-env-explicit.yml  WritingAssistantBackend-env-top-level.yml  WritingAssistantBackend-pip-explicit.txt
WritingAssistantInterface/: .env  .env.md  .flaskenv.md  app.py  manage.py  models.py  pyproject.toml  routes.py
WritingAssistantInterface/setupFrontend/: WritingAssistantInterface-env-explicit.yml  WritingAssistantInterface-env-top-level.yml  WritingAssistantInterface-pip-explicit.txt  pip-installs-urls.txt
WritingAssistantInterface/setupInterface/: 1-setup-top-level.bat  setup.md  (+3 more)
setup/: 1-setup-top-level.bat  (+2 more)
(+90 files in other folders)
